--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
-  <link rel="stylesheet" href="css/common-main-page.min.css">
+  <link rel="stylesheet" href="./css/common-main-page.min.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <div class="main-menu-container">
         <div class="logo">
           <a href="/">
-            <img src="/images/icons/logo.svg" alt="logo">
+            <img src="./images/icons/logo.svg" alt="logo">
           </a>
         </div>
         <nav class="main-menu">
@@ -88,13 +88,13 @@
             </div>
             <div class="organizators">
               <div class="organizators__item">
-                <img src="/images/organizators/organizator-1.svg" alt="Myfin">
+                <img src="./images/organizators/organizator-1.svg" alt="Myfin">
               </div>
               <div class="organizators__item">
-                <img src="/images/organizators/organizator-2.svg" alt="ассоциация белорусских банков">
+                <img src="./images/organizators/organizator-2.svg" alt="ассоциация белорусских банков">
               </div>
               <div class="organizators__item">
-                <img src="/images/organizators/organizator-3.svg" alt="guardo">
+                <img src="./images/organizators/organizator-3.svg" alt="guardo">
               </div>
             </div>
           </div>
@@ -103,7 +103,7 @@
               <div class="media__container">
                 <div class="media__content">
                   <div class="video">
-                    <img src="/images/other/bg-for-video.jpg" alt="img" class="video__preview">
+                    <img src="./images/other/bg-for-video.jpg" alt="img" class="video__preview">
                     <spa class="video__icon">
                       <span class="icon icon-play"></span>
                       </span>
@@ -118,27 +118,38 @@
 
     <div class="section-container">
       <div class="gallery gallery--portrait">
-        <div class="glider-contain">
-          <div class="glider" data-js='gallery-portrait'>
-            <div><img src="/images/girls/01.jpg" alt="img"></div>
-            <div><img src="/images/girls/02.jpg" alt="img"></div>
-            <div><img src="/images/girls/03.jpg" alt="img"></div>
-            <div><img src="/images/girls/04.jpg" alt="img"></div>
-            <div><img src="/images/girls/05.jpg" alt="img"></div>
-            <div><img src="/images/girls/05.jpg" alt="img"></div>
-            <div><img src="/images/girls/04.jpg" alt="img"></div>
-            <div><img src="/images/girls/03.jpg" alt="img"></div>
-            <div><img src="/images/girls/02.jpg" alt="img"></div>
-            <div><img src="/images/girls/01.jpg" alt="img"></div>
+        <div class="gallery__info-container">
+          <div class="block-title block-title--white">
+            <div class="block-title__suptitle">
+              Голосование
+            </div>
+            <h2>Кто станет официальным лицом премии «Банк года 2020»?</h2>
           </div>
 
-          <div class="gallery__info-container">
+          <a href="#" class="btn btn--type-2">Голосовать <span class="icon icon-arrow-right"></span></a>
+
+          <div class="gallery__controls">
             <button role="button" aria-label="Previous" class="glider-prev" id="glider-prev"><span
-                class="icon icon-arrow-left"></span></button>
+                class="icon icon-arrow-left-short"></span></button>
             <button role="button" aria-label="Next" class="glider-next" id="glider-next"><span
                 class="icon icon-arrow-right-short"></span></button>
           </div>
         </div>
+        <div class="glider-contain">
+          <div class="glider" data-js='gallery-portrait'>
+            <div><img src="./images/girls/01.jpg" alt="img"></div>
+            <div><img src="./images/girls/02.jpg" alt="img"></div>
+            <div><img src="./images/girls/03.jpg" alt="img"></div>
+            <div><img src="./images/girls/04.jpg" alt="img"></div>
+            <div><img src="./images/girls/05.jpg" alt="img"></div>
+            <div><img src="./images/girls/05.jpg" alt="img"></div>
+            <div><img src="./images/girls/04.jpg" alt="img"></div>
+            <div><img src="./images/girls/03.jpg" alt="img"></div>
+            <div><img src="./images/girls/02.jpg" alt="img"></div>
+            <div><img src="./images/girls/01.jpg" alt="img"></div>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -194,7 +205,7 @@
           <div class="experts__container">
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="/images/experts/expert1.png" alt="expert">
+                <img src="./images/experts/expert1.png" alt="expert">
               </div>
               <div class="experts__item-text">
                 Стефанович Людмила
@@ -205,7 +216,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="/images/experts/expert2.png" alt="expert">
+                <img src="./images/experts/expert2.png" alt="expert">
               </div>
               <div class="experts__item-text">
                 Слесарев Сергей
@@ -217,7 +228,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="/images/experts/expert3.png" alt="expert">
+                <img src="./images/experts/expert3.png" alt="expert">
               </div>
               <div class="experts__item-text">
                 Швец Александра
@@ -229,7 +240,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="/images/experts/expert4.png" alt="expert">
+                <img src="./images/experts/expert4.png" alt="expert">
               </div>
               <div class="experts__item-text">
                 Василюк виктор
@@ -282,16 +293,16 @@
                   <div class="gallery">
                     <div class="glider-contain">
                       <div class="glider" data-js='gallery'>
-                        <div><img src="/images/gallery/01.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/02.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/03.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/04.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/05.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/06.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/07.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/08.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/09.jpg" alt="img"></div>
-                        <div><img src="/images/gallery/10.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/01.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/02.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/03.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/04.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/05.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/06.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/07.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/08.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/09.jpg" alt="img"></div>
+                        <div><img src="./images/gallery/10.jpg" alt="img"></div>
                       </div>
 
                       <div class="glider__controls">
@@ -315,40 +326,40 @@
     <section class="section-container">
       <div class="partners">
         <a href="" class="partners__item">
-          <img src="/images/partners/partner1.svg" alt="icon">
+          <img src="./images/partners/partner1.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner2.svg" alt="icon">
+          <img src="./images/partners/partner2.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner3.svg" alt="icon">
+          <img src="./images/partners/partner3.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner4.svg" alt="icon">
+          <img src="./images/partners/partner4.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner5.svg" alt="icon">
+          <img src="./images/partners/partner5.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner6.svg" alt="icon">
+          <img src="./images/partners/partner6.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner1.svg" alt="icon">
+          <img src="./images/partners/partner1.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner2.svg" alt="icon">
+          <img src="./images/partners/partner2.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner3.svg" alt="icon">
+          <img src="./images/partners/partner3.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner4.svg" alt="icon">
+          <img src="./images/partners/partner4.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner5.svg" alt="icon">
+          <img src="./images/partners/partner5.svg" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="/images/partners/partner6.svg" alt="icon">
+          <img src="./images/partners/partner6.svg" alt="icon">
         </a>
       </div>
     </section>
@@ -358,7 +369,7 @@
       <div class="main-menu-container">
         <div class="logo">
           <a href="/">
-            <img src="/images/icons/logo.svg" alt="logo">
+            <img src="./images/icons/logo.svg" alt="logo">
           </a>
         </div>
         <nav class="main-menu">
@@ -397,11 +408,11 @@
 
   <!-- Slider -->
   <link rel="stylesheet" href="/plugins/gslider/glider.min.css">
-  <script src="/plugins/gslider/glider.min.js"></script>
+  <script src="./plugins/gslider/glider.min.js"></script>
 
 
-  <script src="/js/temp.js"></script>
-  <script src="/js/gallery.js"></script>
+  <script src="./js/temp.js"></script>
+  <script src="./js/gallery.js"></script>
 </body>
 
 </html>
