change path to slider css

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
   </footer>
 
   <!-- Slider -->
-  <link rel="stylesheet" href="/plugins/gslider/glider.min.css">
+  <link rel="stylesheet" href="./plugins/gslider/glider.min.css">
   <script src="./plugins/gslider/glider.min.js"></script>
 
 
