--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 <body>
   <!-- Main menu -->
   <header>
-    <section class="section-container section-container--header">
+    <section class="section-container section-container--header" id="fast-scroll-btn-switch-down">
       <div class="main-menu-container">
         <div class="logo">
           <a href="/">
             <img src="./images/icons/logo.svg" alt="logo">
           </a>
+          <div class="instagram hover-color-default">
+            <a href="https://www.instagram.com/" target="_blank">
+              <span class="icon icon-instagram"></span>
+            </a>
+          </div>
         </div>
         <nav class="main-menu">
           <button class="main-menu__btn" data-js="open-mobile-menu">
@@ -59,6 +64,7 @@
     </section>
   </header>
   <main>
+    <!-- Отсчет -->
     <!-- О премии -->
     <section class="section-container">
       <div class="container">
@@ -137,16 +143,16 @@
         </div>
         <div class="glider-contain">
           <div class="glider" data-js='gallery-portrait'>
-            <div><img src="./images/girls/01.jpg" alt="img"></div>
-            <div><img src="./images/girls/02.jpg" alt="img"></div>
-            <div><img src="./images/girls/03.jpg" alt="img"></div>
-            <div><img src="./images/girls/04.jpg" alt="img"></div>
-            <div><img src="./images/girls/05.jpg" alt="img"></div>
-            <div><img src="./images/girls/05.jpg" alt="img"></div>
-            <div><img src="./images/girls/04.jpg" alt="img"></div>
-            <div><img src="./images/girls/03.jpg" alt="img"></div>
-            <div><img src="./images/girls/02.jpg" alt="img"></div>
-            <div><img src="./images/girls/01.jpg" alt="img"></div>
+            <div><img data-src="./images/girls/01.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/02.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/03.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/04.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/05.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/05.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/04.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/03.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/02.jpg" class="lazy" alt="img"></div>
+            <div><img data-src="./images/girls/01.jpg" class="lazy" alt="img"></div>
           </div>
         </div>
 
@@ -205,7 +211,7 @@
           <div class="experts__container">
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="./images/experts/expert1.png" alt="expert">
+                <img data-src="./images/experts/expert1.png" class="lazy" alt="expert">
               </div>
               <div class="experts__item-text">
                 Стефанович Людмила
@@ -216,7 +222,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="./images/experts/expert2.png" alt="expert">
+                <img data-src="./images/experts/expert2.png" class="lazy" alt="expert">
               </div>
               <div class="experts__item-text">
                 Слесарев Сергей
@@ -228,7 +234,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="./images/experts/expert3.png" alt="expert">
+                <img data-src="./images/experts/expert3.png" class="lazy" alt="expert">
               </div>
               <div class="experts__item-text">
                 Швец Александра
@@ -240,7 +246,7 @@
             </div>
             <div class="experts__item">
               <div class="experts__item-img">
-                <img src="./images/experts/expert4.png" alt="expert">
+                <img data-src="./images/experts/expert4.png" class="lazy" alt="expert">
               </div>
               <div class="experts__item-text">
                 Василюк виктор
@@ -293,16 +299,16 @@
                   <div class="gallery">
                     <div class="glider-contain">
                       <div class="glider" data-js='gallery'>
-                        <div><img src="./images/gallery/01.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/02.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/03.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/04.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/05.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/06.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/07.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/08.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/09.jpg" alt="img"></div>
-                        <div><img src="./images/gallery/10.jpg" alt="img"></div>
+                        <div><img data-src="./images/gallery/01.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/02.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/03.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/04.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/05.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/06.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/07.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/08.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/09.jpg" class="lazy" alt="img"></div>
+                        <div><img data-src="./images/gallery/10.jpg" class="lazy" alt="img"></div>
                       </div>
 
                       <div class="glider__controls">
@@ -322,48 +328,90 @@
       </div>
     </section>
 
+    <!-- Кнопки расшаривания -->
+    <section class="section-container section-container--pb-0 section-container--no-offset-desk">
+      <div class="floation-buttons">
+        <div class="floation-buttons__item">
+          <a href="https://twitter.com/">
+            <span class="icon icon-twitter"></span>
+          </a>
+        </div>
+        <div class="floation-buttons__item">
+          <a href="https://vk.com">
+            <span class="icon icon-vk"></span>
+          </a>
+        </div>
+        <div class="floation-buttons__item">
+          <a href="https://web.facebook.com">
+            <span class="icon icon-facebook"></span>
+          </a>
+        </div>
+        <div class="floation-buttons__item">
+          <a href="https://ok.ru/">
+            <span class="icon icon-odnoklassniki"></span>
+          </a>
+        </div>
+        <div class="floation-buttons__item floation-buttons__item--hide-on-desk">
+          <a href="#">
+            <span class="icon icon-arrow-up"></span>
+          </a>
+        </div>
+      </div>
+    </section>
+    
     <!-- Партнеры -->
-    <section class="section-container">
+    <section class="section-container" id='fast-scroll-btn-switch-up'>
       <div class="partners">
         <a href="" class="partners__item">
-          <img src="./images/partners/partner1.svg" alt="icon">
+          <img data-src="./images/partners/partner1.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner2.svg" alt="icon">
+          <img data-src="./images/partners/partner2.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner3.svg" alt="icon">
+          <img data-src="./images/partners/partner3.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner4.svg" alt="icon">
+          <img data-src="./images/partners/partner4.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner5.svg" alt="icon">
+          <img data-src="./images/partners/partner5.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner6.svg" alt="icon">
+          <img data-src="./images/partners/partner6.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner1.svg" alt="icon">
+          <img data-src="./images/partners/partner1.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner2.svg" alt="icon">
+          <img data-src="./images/partners/partner2.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner3.svg" alt="icon">
+          <img data-src="./images/partners/partner3.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner4.svg" alt="icon">
+          <img data-src="./images/partners/partner4.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner5.svg" alt="icon">
+          <img data-src="./images/partners/partner5.svg" class="lazy" alt="icon">
         </a>
         <a href="" class="partners__item">
-          <img src="./images/partners/partner6.svg" alt="icon">
+          <img data-src="./images/partners/partner6.svg" class="lazy" alt="icon">
         </a>
       </div>
     </section>
+
+    <!-- Кнопки быстрой прокрутки -->
+    <div class="fast-scroll-btn">
+      <a href="#fast-scroll-btn-switch-up" class="fast-scroll-btn__item hover-color-default" data-js="slow-scroll">
+        <span class="icon icon-arrow-down-long"></span>
+      </a>
+      <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible" data-js="slow-scroll">
+        <span class="icon icon-arrow-up-long"></span>
+      </a>
+    </div>
   </main>
+
   <footer>
     <section class="section-container section-container--footer">
       <div class="main-menu-container">
@@ -406,12 +454,15 @@
     </section>
   </footer>
 
-  <!-- Slider -->
+  <!-- Scripts for Slider -->
   <link rel="stylesheet" href="./plugins/gslider/glider.min.css">
   <script src="./plugins/gslider/glider.min.js"></script>
 
 
+  <script src="./js/lazy-load.js"></script>
   <script src="./js/temp.js"></script>
+  <script src="./js/global.js"></script>
+  <script src="./js/fast-scroll-btn.js"></script>
   <script src="./js/gallery.js"></script>
 </body>
 
