add lazy-load for all images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="main-menu-container">
         <div class="logo">
           <a href="/">
-            <img data-src="./images/icons/logo.svg" alt="logo">
+            <img data-src="./images/icons/logo.svg" class="lazy" alt="logo">
           </a>
           <div class="instagram hover-color-default">
             <a href="https://www.instagram.com/" target="_blank">
@@ -94,13 +94,13 @@
             </div>
             <div class="organizators">
               <div class="organizators__item">
-                <img data-src="./images/organizators/organizator-1.svg" alt="Myfin">
+                <img data-src="./images/organizators/organizator-1.svg" class="lazy" alt="Myfin">
               </div>
               <div class="organizators__item">
-                <img data-src="./images/organizators/organizator-2.svg" alt="ассоциация белорусских банков">
+                <img data-src="./images/organizators/organizator-2.svg" class="lazy" alt="ассоциация белорусских банков">
               </div>
               <div class="organizators__item">
-                <img data-src="./images/organizators/organizator-3.svg" alt="guardo">
+                <img data-src="./images/organizators/organizator-3.svg" class="lazy" alt="guardo">
               </div>
             </div>
           </div>
@@ -109,7 +109,7 @@
               <div class="media__container">
                 <div class="media__content">
                   <div class="video">
-                    <img data-src="./images/other/bg-for-video.jpg" alt="img" class="video__preview">
+                    <img data-src="./images/other/bg-for-video.jpg" alt="img" class="video__preview lazy">
                     <spa class="video__icon">
                       <span class="icon icon-play"></span>
                       </span>
@@ -417,7 +417,7 @@
       <div class="main-menu-container">
         <div class="logo">
           <a href="/">
-            <img data-src="./images/icons/logo.svg" alt="logo">
+            <img data-src="./images/icons/logo.svg" class="lazy" alt="logo">
           </a>
         </div>
         <nav class="main-menu">
