add slow scroll for mobile

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           </a>
         </div>
         <div class="floation-buttons__item floation-buttons__item--hide-on-desk">
-          <a href="#">
+          <a href="#fast-scroll-btn-switch-down" data-js="slow-scroll">
             <span class="icon icon-arrow-up"></span>
           </a>
         </div>
