--- a/index.html
+++ b/index.html
@@ -64,7 +64,57 @@
     </section>
   </header>
   <main>
-    <!-- Отсчет -->
+    <!-- Вступительный блок -->
+    <section class="section-container">
+      <div class="introduction">
+        <div class="introduction__item">
+          <div class="introductory-block">
+            <div class="introductory-block__title">
+              <div class="introductory-block__suptitle">
+                <div>Ежегодня банковская премия</div>
+                <div>25 апреля 2020</div>
+              </div>
+              <h1>Банк года </h1>
+              <div class="introductory-block__subtitle">
+                2020
+              </div>
+            </div>
+            <div class="introductory-block__img">
+              <img src="" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="introduction__item">
+          <div class="countdown">
+            <div class="countdown__title">
+              <div>Успей проголосовать!</div>
+              <div>До конца голосования осталось:</div>
+            </div>
+            <div class="timer">
+              <div class="timer__item">
+                <div class="timer__item-time">55</div>
+                <div class="timer__item-label">дней</div>
+              </div>
+              <div class="timer__item">
+                <div class="timer__item-time">15</div>
+                <div class="timer__item-label">часов</div>
+              </div>
+              <div class="timer__item">
+                <div class="timer__item-time">55</div>
+                <div class="timer__item-label">минут</div>
+              </div>
+              <div class="timer__item">
+                <div class="timer__item-time">45</div>
+                <div class="timer__item-label">секунд</div>
+              </div>
+            </div>
+            <div class="countdown__btn">
+              <a href="#" class="btn btn--type-1">Голосовать<span class="icon icon-arrow-right"></span></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- О премии -->
     <section class="section-container">
       <div class="container">
@@ -97,7 +147,8 @@
                 <img data-src="./images/organizators/organizator-1.svg" class="lazy" alt="Myfin">
               </div>
               <div class="organizators__item">
-                <img data-src="./images/organizators/organizator-2.svg" class="lazy" alt="ассоциация белорусских банков">
+                <img data-src="./images/organizators/organizator-2.svg" class="lazy"
+                  alt="ассоциация белорусских банков">
               </div>
               <div class="organizators__item">
                 <img data-src="./images/organizators/organizator-3.svg" class="lazy" alt="guardo">
@@ -358,7 +409,18 @@
         </div>
       </div>
     </section>
-    
+
+    <!-- Кнопки быстрой прокрутки -->
+    <div class="fast-scroll-btn">
+      <a href="#fast-scroll-btn-switch-up" class="fast-scroll-btn__item hover-color-default" data-js="slow-scroll">
+        <span class="icon icon-arrow-down-long"></span>
+      </a>
+      <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible"
+        data-js="slow-scroll">
+        <span class="icon icon-arrow-up-long"></span>
+      </a>
+    </div>
+
     <!-- Партнеры -->
     <section class="section-container" id='fast-scroll-btn-switch-up'>
       <div class="partners">
@@ -400,16 +462,6 @@
         </a>
       </div>
     </section>
-
-    <!-- Кнопки быстрой прокрутки -->
-    <div class="fast-scroll-btn">
-      <a href="#fast-scroll-btn-switch-up" class="fast-scroll-btn__item hover-color-default" data-js="slow-scroll">
-        <span class="icon icon-arrow-down-long"></span>
-      </a>
-      <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible" data-js="slow-scroll">
-        <span class="icon icon-arrow-up-long"></span>
-      </a>
-    </div>
   </main>
 
   <footer>
