--- a/index.html
+++ b/index.html
@@ -159,12 +159,14 @@
             <div class="media">
               <div class="media__container">
                 <div class="media__content">
+                  <div data-href="https://www.youtube.com/embed/WpU3X_ZeM_A" class="video-container-btn" data-js="show-video">
                   <div class="video">
                     <img data-src="./images/other/bg-for-video.jpg" alt="img" class="video__preview lazy">
                     <spa class="video__icon">
                       <span class="icon icon-play"></span>
                       </span>
                   </div>
+                </div>
                 </div>
               </div>
             </div>
@@ -418,7 +420,7 @@
       <a href="#fast-scroll-btn-switch-down" class="fast-scroll-btn__item hover-color-default visible"
         data-js="slow-scroll">
         <span class="icon icon-arrow-up-long"></span>
-      </a>
+      </adiv>
     </div>
 
     <!-- Партнеры -->
@@ -515,6 +517,7 @@
   <script src="./js/global.js"></script>
   <script src="./js/fast-scroll-btn.js"></script>
   <script src="./js/gallery.js"></script>
+  <script src="./js/video-frame.js"></script>
 </body>
 
 </html>
