add infopartners page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
-  <link rel="stylesheet" href="./css/common-main-page.min.css">
+  <link rel="stylesheet" href="./css/main-page-bundle.min.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="">Информационные партнеры</a>
+                <a href="/infopartners/">Информационные партнеры</a>
               </li>
               <li>
                 <a href="">Контакты</a>
@@ -493,7 +493,7 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="">Информационные партнеры</a>
+                <a href="/infopartners/">Информационные партнеры</a>
               </li>
               <li>
                 <a href="">Контакты</a>
@@ -518,6 +518,7 @@
   <script src="./js/fast-scroll-btn.js"></script>
   <script src="./js/gallery.js"></script>
   <script src="./js/video-frame.js"></script>
+
 </body>
 
 </html>
