--- a/infopartners/index.html
+++ b/infopartners/index.html
@@ -75,9 +75,9 @@
         </div>
         <div class="infopartners">
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/1.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -89,9 +89,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/2.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -103,9 +103,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/3.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -117,9 +117,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/4.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -131,9 +131,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/1.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -145,9 +145,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/4.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -159,9 +159,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/3.png" alt="icon" class="lazy">
-            </div>
+            </a>
 
             <div class="infopartners__item-description">
               <p>
@@ -173,10 +173,9 @@
 
           </div>
           <div class="infopartners__item">
-            <div class="infopartners__item-img">
+            <a class="infopartners__item-img" target="_blank">
               <img data-src="../images/infopartners/2.png" alt="icon" class="lazy">
-            </div>
-
+            </a>
             <div class="infopartners__item-description">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
@@ -321,8 +320,6 @@
   <script src="../js/mobile-menu.js"></script>
   <script src="../js/global.js"></script>
   <script src="../js/fast-scroll-btn.js"></script>
-  <script src="../js/gallery.js"></script>
-  <script src="../js/video-frame.js"></script>
 </body>
 
 </html>
