add contacts page

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
-  <link rel="stylesheet" href="../css/infopartners-bundle.min.css">
+  <link rel="stylesheet" href="../css/contacts-bundle.min.css">
 </head>
 
 <body>
@@ -51,10 +51,10 @@
               <li>
                 <a href="">Итоги</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/infopartners/">Информационные партнеры</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="/contacts/">Контакты</a>
               </li>
             </ul>
@@ -64,126 +64,93 @@
     </section>
   </header>
   <main>
-    <!-- Инфопартнеры -->
+    <!-- Контакты -->
     <div class="section-container section-container--first">
       <div class="container">
         <div class="block-title">
           <div class="block-title__suptitle">
             Банк года 2020
           </div>
-          <h2>Инфопартнеры</h2>
+          <h2>Контакты</h2>
         </div>
-        <div class="infopartners">
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/1.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
+        <div class="contacts">
+          <div class="contacts__item">
+            <div class="contacts-info">
+              <div class="contacts-info__title">
+                Организационный комитет премии "Банк года"
+              </div>
+              <div class="contacts-info__list">
+                <div class="contacts-info__item">
+                  <div class="contacts-info__item-title">
+                    Учредитель:
+                  </div>
+                  <div class="contacts-info__item-info">
+                    <span>ООО "Майфин", г. Минск, пр-т Победителей, 103-1010</span>
+                  </div>
+                </div>
+                <div class="contacts-info__item">
+                  <div class="contacts-info__item-title">
+                    Организатор:
+                  </div>
+                  <div class="contacts-info__item-info">
+                    <span>ООО "Гуардо Медиа", г. Минск, ул. Амураторская, 7-2Б</span>
+                  </div>
+                </div>
+                <div class="contacts-info__item">
+                  <div class="contacts-info__item-title">
+                    Контактная информация:
+                  </div>
+                  <div class="contacts-info__item-info contacts-info__item-info--with-cion">
+                    <span class="icon icon-phone"></span><a href="tel:+375291771106" target="_blank" rel="nofollow">+375
+                      (29) 177-11-06</a>
+                  </div>
+                  <div class="contacts-info__item-info contacts-info__item-info--with-cion">
+                    <span class="icon icon-mail"></span><a href="mailto:bankgoda@grd.by" target="_blank"
+                      rel="nofollow">bankgoda@grd.by</a>
+                  </div>
+                  <div class="contacts-info__item-info contacts-info__item-info--with-cion">
+                    <span class="icon icon-instagram"></span><a href="https://www.instagram.com/bankgoda/" target="_blank"
+                      rel="nofollow">@ bankgoda</a>
+                  </div>
+                </div>
+  
+              </div>
             </div>
-
           </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/2.png" alt="icon" class="lazy">
-            </a>
 
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
+          <div class="contacts__item">
+            <div class="contacts-form">
+              <div class="contacts-form__title">
+                <span>Готовы сотрудничать?</span>
+              </div>
+              <div class="contacts-form__text">
+                <span>Оставьте заявку, и мы свяжемся с вами в ближайшее время</span>
+              </div>
+              <div class="form">
+                <form>
+                  <div class="form__inner">
+                    <div class="form__row form__row--desk-50-50">
+                      <div class="form__cell">
+                        <input type="text" placeholder="Ваше имя">
+                      </div>
+                      <div class="form__cell">
+                        <input type="email" placeholder="Ваш Email">
+                      </div>
+                    </div>
+                    <div class="form__row">
+                      <div class="form__cell">
+                        <textarea name="message" id="" cols="30" rows="5" placeholder="Сообщение"></textarea>
+                      </div>
+                    </div>
+                    <div class="form__row form__row">
+                      <div class="form__cell form__cell--centered">
+                        <button class="btn btn--type-1">Отправить</button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/3.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/4.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/1.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/4.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/3.png" alt="icon" class="lazy">
-            </a>
-
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
-          </div>
-          <div class="infopartners__item">
-            <a class="infopartners__item-img" target="_blank">
-              <img data-src="../images/infopartners/2.png" alt="icon" class="lazy">
-            </a>
-            <div class="infopartners__item-description">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores placeat nobis blanditiis. Laboriosam,
-                accusamus iure laborum sapiente praesentium ullam? Maiores ratione ab cupiditate earum eum tempore alias,
-                laudantium reiciendis adipisci.
-              </p>
-            </div>
-
           </div>
         </div>
       </div>
@@ -300,11 +267,11 @@
               <li>
                 <a href="">Итоги</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/infopartners/">Информационные партнеры</a>
               </li>
-              <li>
-                <a href="/contacts">Контакты</a>
+              <li class="active">
+                <a href="/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
