--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img data-src="./images/icons/logo.svg" class="lazy" alt="logo">
           </a>
           <div class="instagram hover-color-default">
-            <a href="https://www.instagram.com/" target="_blank">
+            <a href="https://www.instagram.com/bankgoda/" target="_blank" rel="_nofollow">
               <span class="icon icon-instagram"></span>
             </a>
           </div>
@@ -55,7 +55,7 @@
                 <a href="/infopartners/">Информационные партнеры</a>
               </li>
               <li>
-                <a href="">Контакты</a>
+                <a href="/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
@@ -496,7 +496,7 @@
                 <a href="/infopartners/">Информационные партнеры</a>
               </li>
               <li>
-                <a href="">Контакты</a>
+                <a href="/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
