change paths in main menu for git

--- a/contacts/index.html
+++ b/contacts/index.html
@@ -52,10 +52,10 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
               <li class="active">
-                <a href="/contacts/">Контакты</a>
+                <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
@@ -268,10 +268,10 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
               <li class="active">
-                <a href="/contacts/">Контакты</a>
+                <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
