--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </button>
           <div class="main-menu__inner">
             <ul class="main-menu__links">
-              <li class="active">
+              <li>
                 <a href="">Положение </a>
               </li>
               <li>
@@ -52,10 +52,10 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
               <li>
-                <a href="/contacts/">Контакты</a>
+                <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
@@ -477,7 +477,7 @@
         <nav class="main-menu">
           <div class="main-menu__inner">
             <ul class="main-menu__links">
-              <li class="active">
+              <li>
                 <a href="">Положение </a>
               </li>
               <li>
@@ -493,10 +493,10 @@
                 <a href="">Итоги</a>
               </li>
               <li>
-                <a href="/infopartners/">Информационные партнеры</a>
+                <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
               <li>
-                <a href="/contacts/">Контакты</a>
+                <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
           </div>
