add correct path to main-menu.js in main page

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
   <script src="./plugins/gslider/glider.min.js"></script>
 
   <script src="./js/lazy-load.js"></script>
-  <script src="./js/main-menu.js"></script>
+  <script src="./js/mobile-menu"></script>
   <script src="./js/global.js"></script>
   <script src="./js/fast-scroll-btn.js"></script>
   <script src="./js/gallery.js"></script>
