some fixs for preload

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
   <link rel= "preconnect" href="https://fonts.googleapis.com/" />
-  <link rel= "preload"  href="./css/main-page-bundle.min.css" />
+  <link rel= "preload"  href="./css/main-page-bundle.min.css" as="style"/>
 </head>
 
 <body>
