--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
-  <link rel="stylesheet" href="css/main-page-bundle.min.css" as="style" type="text/css" >
-  <link rel= "preconnect" href="https://fonts.googleapis.com/" />
-
+  <!-- <link rel="preload" href="./css/main-page-bundle.min.css" as="style" />
+  <link rel= "preconnect" href="https://fonts.googleapis.com/" /> -->
+  <link rel="stylesheet" href="./css/main-page-bundle.min.css" />
 </head>
 
 <body>
