--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bank Goda</title>
-  <link rel="preload" href="./css/main-page-bundle.min.css" as="style" />
-  <link rel= "preconnect" href="https://fonts.googleapis.com/" />
+  <!-- <link rel="preload" href="./css/main-page-bundle.min.css" as="style" />
+  <link rel= "preconnect" href="https://fonts.googleapis.com/" /> -->
   <link rel="stylesheet" href="./css/main-page-bundle.min.css" />
 </head>
 
