add voting block

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
@@ -489,7 +489,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
