--- a/infopartners/index.html
+++ b/infopartners/index.html
@@ -46,7 +46,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
@@ -295,7 +295,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
