--- a/voting-girls/index.html
+++ b/voting-girls/index.html
@@ -45,8 +45,8 @@
               <li>
                 <a href="">Эксперты</a>
               </li>
-              <li>
-                <a href="">Голосование</a>
+              <li class="active">
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
@@ -54,7 +54,7 @@
               <li>
                 <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
@@ -86,9 +86,9 @@
                 <div class="voting-tile__text"><span>Куликовская Вероника</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -107,9 +107,9 @@
                 <div class="voting-tile__text"><span>Корчинская Алеся</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -128,9 +128,9 @@
                 <div class="voting-tile__text"><span>Черношей Каролина</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -149,9 +149,9 @@
                 <div class="voting-tile__text"><span>Тихонович кристина</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -170,9 +170,9 @@
                 <div class="voting-tile__text"><span>Куликовская Вероника</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -191,9 +191,9 @@
                 <div class="voting-tile__text"><span>Корчинская Алеся</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -212,9 +212,9 @@
                 <div class="voting-tile__text"><span>Черношей Каролина</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -233,9 +233,9 @@
                 <div class="voting-tile__text"><span>Тихонович кристина</span></div>
               </div>
               <div class="voting-tile__controls">
-                <div class="voting-tile__votes">3 голоса</div>
+                <div class="voting-tile__votes" data-votes='3'>голоса</div>
                 <div class="voting-tile__btn">
-                  <button class="btn btn--type-3 btn--s">
+                  <button class="btn btn--type-3 btn--s" data-js="voting-btn">
                     <span>Отдать голос</span> <span class="icon icon-like"></span>
                   </button>
                 </div>
@@ -353,7 +353,7 @@
               <li>
                 <a href="">Эксперты</a>
               </li>
-              <li>
+              <li class="active">
                 <a href="">Голосование</a>
               </li>
               <li>
@@ -362,7 +362,7 @@
               <li>
                 <a href="/bg/infopartners/">Информационные партнеры</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="/bg/contacts/">Контакты</a>
               </li>
             </ul>
