--- a/contacts/index.html
+++ b/contacts/index.html
@@ -46,7 +46,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
@@ -262,7 +262,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li>
-                <a href="">Голосование</a>
+                <a href="/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
