--- a/voting-girls/index.html
+++ b/voting-girls/index.html
@@ -46,7 +46,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li class="active">
-                <a href="/voting-girls/">Голосование</a>
+                <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
@@ -354,7 +354,7 @@
                 <a href="">Эксперты</a>
               </li>
               <li class="active">
-                <a href="">Голосование</a>
+                <a href="/bg/voting-girls/">Голосование</a>
               </li>
               <li>
                 <a href="">Итоги</a>
