add paths for rules and main page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="main-menu__inner">
             <ul class="main-menu__links">
               <li>
-                <a href="">Положение </a>
+                <a href="/bg/rules/">Положение </a>
               </li>
               <li>
                 <a href="">Номинации</a>
@@ -472,7 +472,7 @@
     <section class="section-container section-container--footer">
       <div class="main-menu-container">
         <div class="logo">
-          <a href="/">
+          <a href="/bg/">
             <img data-src="./images/icons/logo.svg" class="lazy" alt="logo">
           </a>
         </div>
@@ -480,7 +480,7 @@
           <div class="main-menu__inner">
             <ul class="main-menu__links">
               <li>
-                <a href="">Положение </a>
+                <a href="/bg/rules/">Положение </a>
               </li>
               <li>
                 <a href="">Номинации</a>
