--- a/voting-girls/index.html
+++ b/voting-girls/index.html
@@ -37,7 +37,7 @@
           <div class="main-menu__inner">
             <ul class="main-menu__links">
               <li>
-                <a href="">Положение </a>
+                <a href="/bg/rules/">Положение </a>
               </li>
               <li>
                 <a href="">Номинации</a>
@@ -345,7 +345,7 @@
           <div class="main-menu__inner">
             <ul class="main-menu__links">
               <li>
-                <a href="">Положение </a>
+                <a href="/bg/rules/">Положение </a>
               </li>
               <li>
                 <a href="">Номинации</a>
