--- a/rules/index.html
+++ b/rules/index.html
@@ -76,7 +76,7 @@
         <div class="two-cols-container">
           <div class="two-cols-container__main">
             <div class="text-content">
-              <div class="text-content__section">
+              <div class="text-content__section" id="polozenie">
                 <div class="block-title block-title--type-2">
                   <div class="block-title__suptitle">
                     Глава 1
@@ -95,7 +95,7 @@
                   <li>Конкурс проводится один раз в год и является открытым.</li>
                 </ol>
               </div>
-              <div class="text-content__section">
+              <div class="text-content__section" id="goals">
                 <div class="block-title block-title--type-2">
                   <div class="block-title__suptitle">
                     Глава 2
@@ -112,7 +112,7 @@
                   </li>
                 </ol>
               </div>
-              <div class="text-content__section">
+              <div class="text-content__section" id ="organization">
                 <div class="block-title block-title--type-2">
                   <div class="block-title__suptitle">
                     Глава 3
@@ -130,15 +130,24 @@
                   </li>
                 </ol>
               </div>
-              <div class="text-content__section">
+              <!-- <div class="text-content__section">
                 <a href="#" class="link-default">
                   <span class="icon icon--l icon-pdf"></span><span>Положение о премии Банк года в Беларуси – 2020</span>
                 </a>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="two-cols-container__sidebar">
-            
+            <div class="navigation">
+              <div class="navigation__title">Содержание</div>
+              <div class="navigation__nav">
+                <ul>
+                  <li><a href="#polozenie" class="hover-color-default active" data-js="slow-scroll">Общие положения</a></li>
+                  <li><a href="#goals" class="hover-color-default" data-js="slow-scroll">Цели и задачи</a></li>
+                  <li><a href="#organization" class="hover-color-default" data-js="slow-scroll">Организация конкурса</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -276,6 +285,7 @@
   <script src="../js/mobile-menu.js"></script>
   <script src="../js/global.js"></script>
   <script src="../js/fast-scroll-btn.js"></script>
+  <script src="../js/navigation.js"></script>
 </body>
 
 </html>
